--- a/business-logic/docker-compose.yaml
+++ b/business-logic/docker-compose.yaml
@@ -1,8 +1,8 @@
 version: "3.3"
 
 services:
-  sbs_postgres:
-    container_name: sbs_postgres
+  cloud_postgres:
+    container_name: cloud_postgres
     image: "postgres:14"
     env_file:
       - .env
@@ -12,7 +12,7 @@ services:
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
       POSTGRES_DB: $POSTGRES_DB
     ports:
-      - 5434:5432
+      - 5437:5432
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U admin"]
       interval: 10s
@@ -24,12 +24,12 @@ services:
     build:
       context: .
     ports:
-      - 8080:8080
+      - 8085:8080
     restart: always
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:rw
     depends_on:
-      - sbs_postgres
+      - cloud_postgres
 
   socat-docker:
     image: binlab/socat
