--- a/business-logic/Dockerfile
+++ b/business-logic/Dockerfile
@@ -1,8 +1,12 @@
-FROM maven AS builder
-COPY . .
-RUN mvn clean package -DskipTests
+#FROM maven AS builder
+#COPY . .
+#RUN mvn clean package -DskipTests
+#
+#FROM openjdk:17-jdk-slim
+#ARG JAR_FILE=/target/*.jar
+#COPY --from=builder ${JAR_FILE} app.jar
+#ENTRYPOINT ["java", "-jar", "app.jar"]
 
 FROM openjdk:17-jdk-slim
-ARG JAR_FILE=/target/*.jar
-COPY --from=builder ${JAR_FILE} app.jar
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ADD target/cloud-technologies-0.0.1-SNAPSHOT.jar app.jar
+ENTRYPOINT ["java","-jar","app.jar"]
