--- a/business-logic/pom.xml
+++ b/business-logic/pom.xml
@@ -111,6 +111,19 @@
             <version>4.2.2.RELEASE</version>
             <!--            <scope>test</scope>-->
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.jms/javax.jms-api -->
+        <dependency>
+            <groupId>javax.jms</groupId>
+            <artifactId>javax.jms-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>amazon-sqs-java-messaging-lib</artifactId>
+            <version>1.0.4</version>
+            <type>jar</type>
+        </dependency>
+
     </dependencies>
 
     <build>
