--- a/business-logic/docker-compose.yaml
+++ b/business-logic/docker-compose.yaml
@@ -28,6 +28,11 @@ services:
     ports:
       - 8065:8080
     restart: always
+    environment:
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_DB: $POSTGRES_DB
+      POSTGRES_URL: $POSTGRES_URL
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:rw
     depends_on:
