--- a/business-logic/pom.xml
+++ b/business-logic/pom.xml
@@ -119,7 +119,11 @@
             <version>1.0.4</version>
             <type>jar</type>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.3</version>
+        </dependency>
     </dependencies>
 
     <build>
