--- a/producer/pom.xml
+++ b/producer/pom.xml
@@ -89,6 +89,14 @@
             <version>1.0.4</version>
             <type>jar</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-sns -->
+        <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/sns -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sns</artifactId>
+            <version>2.19.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
